--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Web.config
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Web.config
@@ -10,7 +10,10 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-Tenaris.Tamsa.HRM.Fat2.WebTools-20151211122330;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
-    <add name="AusV1_Entities1" connectionString="metadata=res://*/AusV1_Model.csdl|res://*/AusV1_Model.ssdl|res://*/AusV1_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.92.24.106;initial catalog=AusV1_Laco2_Dev;persist security info=True;user id=Uresti;password=Uresti;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!-- add name="AusV1_Entities1" connectionString="metadata=res://*/AusV1_Model.csdl|res://*/AusV1_Model.ssdl|res://*/AusV1_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.92.24.106;initial catalog=AusV1_Laco2_Dev;persist security info=True;user id=Uresti;password=Uresti;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" / -->
+    <add name="AusV1_Entities1" connectionString="metadata=res://*/AusV1_Model.csdl|res://*/AusV1_Model.ssdl|res://*/AusV1_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=AusV1;Integrated Security=SSPI;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    
+   
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -23,7 +26,7 @@
     <add key="MvcSiteMapProvider_ScanAssembliesForSiteMapNodes" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.0" tempDirectory="Z:\TMP\ASPNET">
+    <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </assemblies>
