--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Tenaris.Tamsa.HRM.Fat2.WebTools.csproj
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Tenaris.Tamsa.HRM.Fat2.WebTools.csproj
@@ -187,7 +187,7 @@
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\TipViewModel.cs" />
+    <Compile Include="Models\ToolViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Telerik\telerik.common.min.css" />
