--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Tenaris.Tamsa.HRM.Fat2.WebTools.csproj
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Tenaris.Tamsa.HRM.Fat2.WebTools.csproj
@@ -178,6 +178,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CatalogController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PropertyController.cs" />
     <Compile Include="Controllers\ToolController.cs" />
@@ -186,6 +187,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\Catalog_vm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\ToolViewModel.cs" />
   </ItemGroup>
@@ -329,6 +331,8 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Property\GetProperties.cshtml" />
     <Content Include="Views\Property\Create.cshtml" />
+    <Content Include="Views\Catalog\Index.cshtml" />
+    <Content Include="Views\Catalog\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
